# omniduct

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  tests.yml
docs/: Makefile  conf.py  contributions.rst  deployment.rst  extensions.rst  index.rst  installation.rst  make.bat  protocols.rst  python_deps.txt  quickstart.rst
docs/api/: core.rst  overview.rst  registry.rst
docs/api/caches/: overview.rst
docs/api/caches/reference/: filesystem.rst  local.rst
docs/api/databases/: overview.rst
docs/api/databases/reference/: druid.rst  hiveserver2.rst  neo4j.rst  presto.rst  pyspark.rst  sqlalchemy.rst
docs/api/filesystems/: overview.rst
docs/api/filesystems/reference/: local.rst  s3.rst  webhdfs.rst
docs/api/remotes/: overview.rst
docs/api/remotes/reference/: ssh.rst  ssh_paramiko.rst
docs/examples/: mysql.rst  presto.rst
example_wrapper/: MANIFEST.in  README.md  setup.py
example_wrapper/example_wrapper/: __init__.py  _version.py  services.py  services.yml
omniduct/: __init__.py  _version.py  duct.py  eecs481test.py  eecs481test2.py  eecs481test3.py  eecs481test4.py  eecs481test5.py  eecs481test6.py  errors.py  protocols.py  registry.py  session.py
omniduct/caches/: _serializers.py  base.py  filesystem.py  local.py
omniduct/databases/: _cursor_formatters.py  _cursor_serializer.py  _namespaces.py  _pandas.py  _schemas.py  base.py  cursor_formatters.py  druid.py  exasol.py  hiveserver2.py  livy.py  neo4j.py  presto.py  pyspark.py  redis.py  schemas.py  sqlalchemy.py  stub.py
omniduct/filesystems/: _pyarrow_compat.py  _webhdfs_helpers.py  azure_data_lake.py  base.py  eecs481test10.py  eecs481test7.py  eecs481test8.py  eecs481test9.py  garabeprevious.py  garbafeprevprev.py  local.py  s3.py  simple.py  stub.py  webhdfs.py  webhdfs_helpers.py
omniduct/nosql/: base.py
omniduct/remotes/: base.py  ssh.py  ssh_paramiko.py  stub.py
omniduct/renderers/: base.py  jinja.py  md.py
omniduct/restful/: base.py
omniduct/tests/: test_caches.py
omniduct/utils/: about.py  config.py  debug.py  decorators.py  dependencies.py  docs.py  magics.py  metaclasses.py  ports.py  processes.py  proxies.py  session.py  storage.py  submodules.py
omniduct/wrappers/: base.py  redis.py
tests/: test_caches.py  test_restful.py
tests/databases/: test__namespaces.py  test_base.py
